# px4_x500_ws

./: .gitignore
src/px4_navigation/: package.xml  setup.cfg  setup.py
src/px4_navigation/config/: navigation.yaml  slam.yaml
src/px4_navigation/launch/: navigation.launch.py  slam.launch.py  static_transforms.launch.py
src/px4_navigation/maps/: lidar_2d_walls.pgm  lidar_2d_walls.yaml  warehouse_map.yaml
src/px4_navigation/px4_navigation/: cmd_vel_bridge.py  tf_publisher.py
src/px4_navigation/rviz/: px4_navigation.rviz  px4_slam.rviz
src/px4_offboard/: package.xml  setup.py
src/px4_offboard/config/: collision_prevention_params.yaml  lidar_bridge.yaml
src/px4_offboard/launch/: offboard_velocity_control.launch.py
src/px4_offboard/px4_offboard/: collision_prevention.py  obstacle_distance.py  odom_publisher.py  processes.py  tf_publisher.py  velocity_control.py
src/x500_bridge/: setup.py
src/x500_bridge/config/: slam.rviz
src/x500_bridge/launch/: slam_with_px4.launch.py
src/x500_bridge/x500_bridge/: odom_bridge.py
