<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_navigation</name>
  <version>0.0.0</version>
  <description>Navigation package for PX4 offboard control</description>
  <maintainer email="nathanca@todo.todo">nathanca</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 -->
  <depend>rclpy</depend>
  
  <!-- PX4 Messages -->
  <depend>px4_msgs</depend>

  <!-- Navigation Stack -->
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>
  
  <!-- SLAM -->
  <depend>slam_toolbox</depend>
  
  <!-- Messages -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  
  <!-- Visualization -->
  <depend>rviz2</depend>
  
  <!-- TF -->
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>